<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naviterier</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="outdoor_navigation">Outdoor navigation</string>
    <string name="indoor_navigation">Indoor navigation</string>
    <string name="last_navigation">Last navigation</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_outdoor_map_selection">Outdoor map Selection</string>
    <string name="title_activity_outdoor_from">Outdoor navigate from</string>
    <string name="title_activity_outdoor_to">Outdoor navigate to</string>
    <string name="title_activity_outdoor_navigatio">Outdoor Navigatio</string>
    <string name="title_activity_indoor_map_selection">Indoor map Selection</string>
    <string name="title_activity_indoor_from">Indoor navigate from</string>
    <string name="title_activity_indoor_to">Indoor navigate to</string>
    <string name="title_activity_indoor_navigation">Indoor Navigation</string>
    <string name="no_local_copy">No local copy</string>
    <string name="to_download">Map is not available on your device. Do you want to download the map?</string>
    <string name="download_complete">Download complete.</string>
    <string name="data_saved">Data was saved on local storage.</string>
    <string name="download_failed">Download failed</string>
    <string name="data_not_saved">Data was not saved!</string>
    <string name="downloading">Downloading...</string>
    <string name="please_wait">Please wait</string>
    <string name="previous_step">Previous step</string>
    <string name="next_step">Next step</string>
    <string name="repeat_step">Repeat step</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="exit_navigation">Exit navigation</string>
    <string name="call_help">Call for help</string>
    <string name="send_sos_sms">Send SOS sms</string>
    <string name="test_gps_statue">Check the statue of network</string>
    <string name="nav_distance">Check distance</string>
    <string name="want_send_sos_sms">Send SOS sms?</string>
    <string name="sos_sms_info">SOS sms contains information about your current position.</string>
    <string name="sms_sent">Sms sent</string>
    <string name="sms_success">Sms was successfully sent</string>
    <string name="finish_distance">Distance to finish</string>
    <string name="network_statue">Statue of network</string>
    <string name="really_exit">Do you really want to exit navigation?</string>
    <string name="title_activity_outdoor_call">Call for help</string>
    <string name="stora_unavailable">Storage is unavailable</string>
    <string name="sdcard_unreadable">Storage is\'nt available to read!</string>
    <string name="sdcard_unwritable">Storage is\'nt available to write!</string>
    <string name="point_distance">Distance to next important point is approximately: %d m.</string>
    <string name="distance_to_finish">Distance to finish is approximately: %d m.</string>
    <string name="c_net_status" formatted="false">You are aimed, with approximately accuracy %1$d m.</string>
    <string name="gps_disable">GPS is disabled</string>
    <string name="gps_want_to_start">Do you want to enable GPS?</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="point_distance_unavailable">Distance to next important point is not available.</string>
    <string name="file_not_exist">File doesn\'t exist</string>
    <string name="maps_list_unavailable">Map list file doesn\'t exists. Wait for download from the server!</string>
    <string name="map_not_exist">Map doesn\'t exists!</string>
    <string name="marshalling_exception">Invalid file</string>
    <string name="map_invalid_xml">Xml file of map does\'t correspond to scheme!</string>
    <string name="list_invalid_xml">Xml file of map list does\'t correspond to scheme!</string>
    <string name="navigation_inposible">Navigation isn\'t possible</string>
    <string name="same_from_to">It\'s not possible navigate to same point.</string>
    <string name="outdoor_sms_message" formatted="false">I got lost on the way from \'%s\' to \'%s\' while hopping \'%s\'. My current GPS coordinates is: %f, %f. Please help me.</string>
    <string name="contact_xml_invalid">Xml file of contacts does\'t correspond to scheme!</string>
    <string name="navigation_start">Navigation started</string>
    <string name="navigation_instruction">To open the menu and access more functionality swipe two fingers from left to right.</string>
    <string name="contacts_not_exist">Contacts don\'t exists!</string>
    <string name="title_activity_indoor_navigatio">Indoor navigation</string>
    <string name="path_wasnt_find">Path wasn\'t find!</string>
    <string name="problem_with_scheme">There is probably problem with map.</string>
    <string name="unable_to_download_scheme">Unable to download scheme list.</string>
    <string name="map_scheme_downloaded">Map scheme list downloaded.</string>
    <string name="maps_list_unavailable_exit">Map list file doesn\'t exists.</string>
    <string name="filtering">Filtering</string>
    <string name="filtering_tutor">Text field at top is used to filtering of list.</string>
    <string name="navigation_done">Navigation finished</string>
    <string name="want_navigate_to">You have reached your destination. To navigate to another place?</string>
    <string name="updating_list">Updating map list.</string>
    <string name="downloading_map_list">Downloading list of map</string>
    <string name="updating_map_list">Updating list of map</string>
    <string name="update_complete">Update complete</string>
    <string name="map_scheme_updated">Map list updated</string>
    <string name="position_checker">Position checker service</string>
    <string name="position_checker_running">Service is running</string>
    <string name="sms_not_send">Did not send sms</string>
    <string name="sms_not_send_reason">Sending SMS is not allowed or phone number is not valid.</string>
    <string name="title_activity_outdoor_navigation_sec">OutdoorNavigationSec</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_outdoor_navigation_v2">OutdoorNavigationV2</string>
    <string name="menu">Menu</string>
    <string name="navigation">Navigation</string>

</resources>
