<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1"
        android:background="@android:color/black">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outdoor_navigation"
            android:text="@string/outdoor_navigation"
            android:layout_weight="0.33"
            android:background="@drawable/btn_main"
            android:clickable="true"
            android:gravity="bottom|left"
            android:layout_marginBottom="1dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/indoor_navigation"
            android:text="@string/indoor_navigation"
            android:layout_weight="0.33"
            android:background="@drawable/btn_main"
            android:clickable="true"
            android:gravity="bottom|left"
            android:layout_marginBottom="1dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_navigation"
            android:text="@string/last_navigation"
            android:layout_weight="0.33"
            android:background="@drawable/btn_main"
            android:clickable="true"
            android:gravity="bottom|left"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>
</FrameLayout>
